--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,9 @@ body {
 
 main {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 852px;
+  height: 100dvh;
   overflow: hidden;
 }
